--- a/wordpress/02_Dynamic-blocks/src/style.scss
+++ b/wordpress/02_Dynamic-blocks/src/style.scss
@@ -7,8 +7,8 @@
 
 .wp-block-dynamic-blocks-dynamic-blocks {
 	font-size: 1em;
-	background: #ffff001a;
 	padding: 1em;
+	position: relative;
 
 	&.dark-theme {
 		background: #333;
@@ -22,6 +22,56 @@
 
 		p {
 			color: #ddd;
+		}
+	}
+
+	form {
+		margin-bottom: 0;
+		&::before {
+			-webkit-font-smoothing:antialiased;
+			-moz-osx-font-smoothing:grayscale;
+			display:inline-block;
+			font-style:normal;
+			font-variant:normal;
+			font-weight:normal;
+			line-height:1;
+			font-family:"Font Awesome 5 Free";
+			font-weight:900;
+			line-height:inherit;
+			vertical-align:baseline;
+			content:"";
+			position:absolute;
+			top:1em;
+			left:1em;
+			line-height:1
+		}
+
+		input[type=search] {
+			width: 100%;
+			padding: .618em .618em .618em 2.617924em;
+			background-color: #f2f2f2;
+			color: #43454b;
+			border: 0;
+			-webkit-appearance: none;
+			box-sizing: border-box;
+			font-weight: 400;
+			box-shadow: inset 0 1px 1px rgba(0,0,0,.125);
+		}
+		
+		button[type=submit] {
+			border:0;
+			clip:rect(1px, 1px, 1px, 1px);
+			-webkit-clip-path:inset(50%);
+			clip-path:inset(50%);
+			height:1px;
+			margin:-1px;
+			overflow:hidden;
+			padding:0;
+			position:absolute;
+			width:1px;
+			word-wrap:normal !important;
+			top:0;
+			left:0
 		}
 	}
 }
