--- a/wordpress/02_Dynamic-blocks/src/style.scss
+++ b/wordpress/02_Dynamic-blocks/src/style.scss
@@ -27,28 +27,29 @@
 
 	form {
 		margin-bottom: 0;
+		font-size: 18px;
+		position: relative;
+
 		&::before {
+			// content: url(path/to/your.svg);
+			content:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'  width='24' height='24' class='search-icon' %3E%3Cpath d='M13 5c-3.3 0-6 2.7-6 6 0 1.4.5 2.7 1.3 3.7l-3.8 3.8 1.1 1.1 3.8-3.8c1 .8 2.3 1.3 3.7 1.3 3.3 0 6-2.7 6-6S16.3 5 13 5zm0 10.5c-2.5 0-4.5-2-4.5-4.5s2-4.5 4.5-4.5 4.5 2 4.5 4.5-2 4.5-4.5 4.5z'%3E%3C/path%3E%3C/svg%3E");
 			-webkit-font-smoothing:antialiased;
 			-moz-osx-font-smoothing:grayscale;
 			display:inline-block;
-			font-style:normal;
-			font-variant:normal;
-			font-weight:normal;
 			line-height:1;
-			font-family:"Font Awesome 5 Free";
-			font-weight:900;
 			line-height:inherit;
 			vertical-align:baseline;
-			content:"";
 			position:absolute;
-			top:1em;
-			left:1em;
-			line-height:1
+			top: 0;
+			left: 0;
+			line-height: 1;
+			padding: 12px 5px;
 		}
 
 		input[type=search] {
+			font-size: 18px;
 			width: 100%;
-			padding: .618em .618em .618em 2.617924em;
+			padding: 12px 12px 12px 32px;
 			background-color: #f2f2f2;
 			color: #43454b;
 			border: 0;
@@ -56,6 +57,8 @@
 			box-sizing: border-box;
 			font-weight: 400;
 			box-shadow: inset 0 1px 1px rgba(0,0,0,.125);
+
+
 		}
 		
 		button[type=submit] {
