--- a/wordpress/02_Dynamic-blocks/src/style.scss
+++ b/wordpress/02_Dynamic-blocks/src/style.scss
@@ -50,15 +50,17 @@
 			font-size: 18px;
 			width: 100%;
 			padding: 12px 12px 12px 32px;
-			background-color: #f2f2f2;
+			background-color: #d2d2d2;
 			color: #43454b;
 			border: 0;
 			-webkit-appearance: none;
 			box-sizing: border-box;
 			font-weight: 400;
-			box-shadow: inset 0 1px 1px rgba(0,0,0,.125);
-
-
+			&:focus {
+				border: unset;
+				outline-width: unset;
+				outline-style: unset;
+			}
 		}
 		
 		button[type=submit] {
@@ -75,6 +77,36 @@
 			word-wrap:normal !important;
 			top:0;
 			left:0
+		}
+	}
+
+	.search-results {
+		font-size: 12px;
+		display: flex;
+		flex-direction: column;
+		gap: 5px;
+		border: 3px solid #d2d2d2;
+		.line {
+			padding: 7px;
+			height: 50px;
+			&:hover {
+				background-color: #f2f2f2;;
+			}
+			a {
+				display: grid;
+				grid-template-columns: 50px auto;
+				gap: 10px;
+				h2 {
+					font-size: 16px;
+				}
+				img {
+					height: 50px;
+					width: auto;
+				}
+			}
+		}
+		&.hidden {
+			display: none;
 		}
 	}
 }
