--- a/wordpress/02_Dynamic-blocks/src/style.scss
+++ b/wordpress/02_Dynamic-blocks/src/style.scss
@@ -7,7 +7,6 @@
 
 .wp-block-dynamic-blocks-dynamic-blocks {
 	font-size: 1em;
-	padding: 1em;
 	position: relative;
 
 	&.dark-theme {
@@ -26,7 +25,6 @@
 	}
 
 	form {
-		margin-bottom: 0;
 		font-size: 18px;
 		position: relative;
 
@@ -50,8 +48,8 @@
 			font-size: 18px;
 			width: 100%;
 			padding: 12px 12px 12px 32px;
-			background-color: #d2d2d2;
-			color: #43454b;
+			// background-color: #d2d2d2;
+			// color: #43454b;
 			border: 0;
 			-webkit-appearance: none;
 			box-sizing: border-box;
